# AutoForge

./: .gitignore  LICENSE  README.md  busters.py  main.py  pyproject.toml  sample_code.py  sample_rewritten.py  test.py
src/autoforge/: __init__.py  cfg.py  common_structures.py  lineno.py  printlib.py  rda.py  shuffle.py
src/autoplag/: __init__.py  cfg.py  common_structures.py  graph.py  lineno.py  rda.py  shuffle.py
tests/: test_usages.py
